<resources>
    <string name="app_name">Aprende Circuitos</string>
    <string name="titulo_menu">TEMAS</string>
    <string name="btn1_menu">Componentes</string>
    <string name="btn1_compon">Resistencia</string>
    <string name="btn2_compon">Capacitor</string>
    <string name="btn3_compon">Transistor</string>
    <string name="btn3_compons">Transistores</string>
    <string name="btn1_resis">¿Qué es una resistencia?</string>
    <string name="btn2_resis">¿Cómo leer una resistencia?</string>
    <string name="btn3_resis">Tipos de resistencia.</string>
    <string name="btn1_cap">¿Qué es un capacitor?</string>
    <string name="btn2_cap">¿Cómo medir la capacitancia?</string>
    <string name="btn3_cap">Tipos de capacitores.</string>
    <string name="btn1_tran">¿Qué es un transistor?</string>
    <string name="btn2_tran">¿Cómo funciona un transistor?</string>
    <string name="btn3_tran">Tipos de transistores.</string>
    <string name="f_rmulas">Fórmulas</string>
    <string name="tutoriales_v_deos">Tutoriales/Vídeos</string>
    <string name="login">Google</string>
    <string name="que_resis_1">Se le denomina resistencia eléctrica a la oposición al flujo de corriente eléctrica a través de un conductor.\n
        La simbología de la resistencia es:</string>
    <string name="que_resis_2">La unidad de resistencia en el Sistema Internacional es el ohmio, que se representa con la letra griega omega (Ω)\n
        En general todo material presenta una resistencia natural, la cual depende
        de su estructura interna, las impurezas y composición atómica.</string>
    <string name="tipos_resis_1">Los tipos de resistencias más utilizadas son:\n - Resistencias fijas: aglomeradas, de
        película de carbón, de película metálica y bobinadas.</string>
    <string name="tipos_resis_2">- Resistencias variables: bobinadas, de película.</string>
    <string name="tipos_resis_3">- Resistencias dependientes o variables: LDR, VDR, PTC, NTC.</string>
    <string name="tipos_resis_4">Los tipos de resistencias por su composición son: \n
        Resistor de hilo bobinado.\n Fueron de los primeros tipos en fabricarse, y aún se utilizan cuando
        se requieren potencias algo elevadas de disipación. Están constituidos por un hilo conductor bobinado
        en forma de hélice o espiral (a modo de rosca de tornillo) sobre un sustrato cerámico. </string>
    <string name="tipos_resis_5">Resistor de carbón prensado.\n Los resistores de este tipo son muy inestables
        con la temperatura, tienen unas tolerancias de fabricación muy elevadas, en el mejor de los casos se consigue
        un 10% de tolerancia, incluso su valor óhmico puede variar por el mero hecho de la soldadura, en el que se
        somete a elevadas temperaturas al componente.</string>
    <string name="tipos_resis_6">Resistores de película de carbón.\n Se utiliza un tubo cerámico como sustrato sobre el
        que se deposita una película de carbón tal como se aprecia en la figura.</string>
    <string name="tipos_resis_7">Resistores de película metálica.\n Este tipo de resistor es el que mayoritariamente se fabrica
        hoy día, con unas características de ruido y estabilidad mejoradas con respecto a todas las anteriores. Tienen un coeficiente de
        temperatura muy pequeño, del orden de 50 ppm/°C (partes por millón y grado Centígrado). También soportan mejor el paso del tiempo,
        permaneciendo su valor en ohmios durante un mayor período de tiempo. Se fabrican este tipo de resistores de hasta 2 watts
        de potencia, y con tolerancias del 1% como tipo estándar. </string>
    <string name="tipos_resis_8">Resistores de película de óxido metálico.\n Son muy similares a las de película de carbón en cuanto a su
        modo de fabricación, pero son más parecidas, eléctricamente hablando a las de película metálica. Se hacen igual que las de película
        de carbón, pero sustituyendo el carbón por una fina capa de óxido metálico</string>
    <string name="leer_resis_1">En una resistencia tenemos generalmente 4 líneas de colores, aunque podemos encontrar algunas que contenga
        5 líneas (4 de colores y 1 que indica tolerancia) vamos a tomar la más general las de 4 líneas, las primeras 3 y dejamos aparte la
        tolerancia que es plateada o dorada.\n La primera línea representa el dígito de las decenas.\n La segunda línea representa el dígito
        de las unidades.\n El número así formado se multiplica por la potencia de 10 expresada por la tercera línea (multiplicador).</string>
    <string name="leer_resis_2">Los dígitos dependen del color que se consigue de la tabla:</string>
    <string name="que_cap_1">El capacitor es un dispositivo eléctrico que permite almacenar energía en forma de campo eléctrico. Es decir,
        es un dispositivo que almacena cargas en reposo o estáticas.</string>
    <string name="que_cap_2">Un capacitor es un componente pasivo ya que no se encarga de la excitación eléctrica, sino que sirve para conectar
        componentes activos y conservar la energía. Esto le permite servir de sustento a un campo eléctrico</string>
    <string name="Medir_cap">1. Use el multímetro digital (DMM) para asegurarse de que NO haya energía en el circuito.\n 2. Inspeccione visualmente
        el capacitor.\n 3. Gire el selector al modo Medición de capacitancia.\n 4. Para una medición correcta, se debe retirar y descargar el
        capacitor del circuito.\n 5. Conecte los cables de prueba a las terminales del capacitor. \n 6. Lea la medición que se muestra. Si el valor de
        capacitancia se encuentra dentro del rango de medición, el multímetro mostrará el valor del capacitor.</string>
    <string name="tipo_cap_1">1. Capacitor electrolítico: En general, los capacitores electrolíticos se usan cuando se requieren los valores de
        condensador grandes.</string>
    <string name="tipo_cap_2">2. Condensador de mica: Estos tipos de capacitores son un grupo de minerales naturales y los capacitores de mica
        plateada usan el dieléctrico. Hay dos tipos de condensadores de mica que son condensadores sujetos y condensador de mica plateada.</string>
    <string name="tipo_cap_3">3. Condensador de papel: La construcción del condensador de papel está entre las dos hojas de papel de aluminio y están
        separadas del papel, o papel aceitado y encerado fino.</string>
    <string name="tipo_cap_4">4. Condensador de película: Los tipos de capacitores de película también son condensadores y utilizan un plástico
        delgado como el dieléctrico.</string>
    <string name="tipo_cap_5">5. Condensadores no polarizados: Los condensadores no polarizados se clasifican en dos tipos de capacitores de
        lámina de plástico y el otro es el condensador electrolítico no polarizado.</string>
    <string name="tipo_cap_6">6. Condensador cerámico: Los tipos de capacitores cerámicos son los condensadores y utilizan el material
        cerámico como dieléctrico.</string>
    <string name="que_tran_1">Es un tipo de dispositivo electrónico semiconductor, capaz de modificar una señal eléctrica de salida como
        respuesta a una de entrada, sirviendo como amplificador, conmutador, oscilador o rectificador de la misma.</string>
    <string name="como_funciona_transistor">Los transistores operan sobre un flujo de corriente, operando como amplificadores
        (recibiendo una señal débil y generando una fuerte) o como interruptores (recibiendo una señal y cortándole el paso) de
        la misma.\n Esto ocurre dependiendo de cuál de las tres posiciones ocupe un transistor en un determinado momento, y que son:\n En activa.
        Se permite el paso de un nivel de corriente variable (más o menos corriente).\n En corte. No deja pasar la corriente eléctrica.\n En saturación.
        Deja pasar todo el caudal de la corriente eléctrica.</string>
    <string name="tipo_tran_1">Los  tipos de transistores son:\n Transistor de contacto puntual. También llamado “de punta de contacto”, es el tipo más antiguo de transistor
        y opera sobre una base de germanio. Fue un invento revolucionario, a pesar de que era difícil de fabricar, frágil y ruidoso. Hoy
        en día no se le emplea más.</string>
    <string name="tipo_tran_2">Transistor de unión bipolar. Fabricado sobre un cristal de material semiconductor, que se contamina de manera selectiva y
        controlada con átomos de arsénico o fósforo (donantes de electrones), para generar así las regiones de base, emisor y colector</string>
    <string name="tipo_tran_3">Transistor de efecto de campo. Se emplea en este caso una barra de silicio o algún otro semiconductor semejante,
        en cuyos terminales se establecen terminales óhmicos, operando así por tensión positiva.</string>
    <string name="tipo_tran_4">Fototransistores. Se llaman así a los transistores sensibles a la luz, en espectros cercanos a la visible.
        De modo que se pueden operar por medio de ondas electromagnéticas a distancia.</string>
    <string name="e_mail">E-mail</string>
    <string name="registrar">Registrar</string>
    <string name="acceder">Acceder</string>
    <string name="contrase_a">Contraseña</string>
    <string name="google">Google</string>
    <string name="prefs_file">ucb.bo.edu.login.PREFERENCE_FILE_KEY</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="usuario">Usuario</string>
    <string name="btn_leyOhm">Ley de Ohm</string>
    <string name="leyOhm">La ley de ohm stablece que la diferencia de potencial V que aplicamos entre los extremos de un conductor
        determinado es directamente proporcional a la intensidad de la corriente I que circula por el citado conductor.
        Ohm completó la ley introduciendo la noción de resistencia eléctrica R; que es el factor de proporcionalidad que
        aparece en la relación entre V e I</string>
    <string name="btn_capacitancia">Capacitancia</string>
    <string name="capacitancia">Dos conductores, aislados eléctricamente uno del otro que tienen
una diferencia de potencial V entre ellos y que tienen cargas iguales y opuestas. Una combinación de este tipo se denomina
capacitor o condensador. \nLa capacitancia o capacidad de un capacitor se define como la razón entre la magnitud de la carga en
        cualquiera de los conductores y la magnitud de la diferencia de potencial entre ellos</string>
    <string name="btn_transistor_bjt">Transistor BJT</string>
    <string name="btn_transistor_fet">Transistor FET</string>
    <string name="p_fija">Polarización fija</string>
    <string name="p_em">Polarización de emisor</string>
    <string name="p_vol">Polarización divisor de voltaje</string>
    <string name="fija">La polarización fija es la más sencilla y rápida para realizar, pero también la más inestable ante las variaciones
        de beta, por tanto también la menos usada. La polarización fija solo se usa en la configuración emisor común, ya que en la configuración
        base común cortocircuita la entrada, y en la configuración colector común cortocircuita la salida.</string>
    <string name="emisor">La polarización estabilizado en emisor presenta una mejor estabilidad que la polarización fija, pero no mejor que la
        polarización por divisor de voltaje y que la polarización por realimentación de colector. Además se puede usar en todas las configuraciones
        del transistor bjt, emisor común, base común y colector común</string>
    <string name="divisor">La polarización por divisor de voltaje es la polarización más estable respecto al punto de trabajo Q. Se puede usar en todas
        las configuraciones del transistor bjt, emisor común, base común, y colector común.</string>
</resources>