<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnVideos"
        android:layout_width="228dp"
        android:layout_height="104dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/rancho"
        android:text="@string/tutoriales_v_deos"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="36sp"
        app:backgroundTint="@color/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnFormulas" />

    <Button
        android:id="@+id/btnFormulas"
        android:layout_width="228dp"
        android:layout_height="104dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/rancho"
        android:text="@string/f_rmulas"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="36sp"
        app:backgroundTint="@color/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnComponentes" />

    <Button
        android:id="@+id/btnComponentes"
        android:layout_width="228dp"
        android:layout_height="104dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/rancho"
        android:text="@string/btn1_menu"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="36sp"
        app:backgroundTint="@color/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTemas" />

    <TextView
        android:id="@+id/textViewTemas"
        android:layout_width="160dp"
        android:layout_height="77dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/rancho"
        android:text="@string/titulo_menu"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="@color/letter"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnUSer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usuario"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>