<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnTran"
        android:layout_width="228dp"
        android:layout_height="104dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/rancho"
        android:text="@string/btn3_compon"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="36sp"
        app:backgroundTint="@color/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCap" />

    <Button
        android:id="@+id/btnCap"
        android:layout_width="228dp"
        android:layout_height="104dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/rancho"
        android:text="@string/btn2_compon"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="36sp"
        app:backgroundTint="@color/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnResistencia" />

    <Button
        android:id="@+id/btnResistencia"
        android:layout_width="228dp"
        android:layout_height="104dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/rancho"
        android:text="@string/btn1_compon"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="36sp"
        app:backgroundTint="@color/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewVideos" />

    <TextView
        android:id="@+id/textViewVideos"
        android:layout_width="332dp"
        android:layout_height="74dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/rancho"
        android:text="@string/tutoriales_v_deos"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="@color/letter"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>