<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor"
    tools:context=".AuthActivity">

    <LinearLayout
        android:id="@+id/authLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/emailText"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            android:textColor="#050505"
            android:textSize="24sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <EditText
            android:id="@+id/providerText"
            style="@style/Widget.AppCompat.AutoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/contrase_a"
            android:inputType="textPassword"
            android:textColor="#000000"
            android:textSize="24sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/registerBtn"
                android:fontFamily="@font/rancho"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="36sp"
                app:backgroundTint="@color/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/registrar" />

            <Space
                android:layout_width="8dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/logInBtn"
                android:fontFamily="@font/rancho"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="36sp"
                app:backgroundTint="@color/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/acceder" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="26dp" />

        <Button
            android:id="@+id/googleBtn"
            android:fontFamily="@font/rancho"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="36sp"
            app:backgroundTint="@color/button"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:drawableStart="@mipmap/google_foreground"
            android:drawableLeft="@mipmap/google_foreground"
            android:text="@string/google" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>