<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor"
    tools:context=".Formulas">

    <Button
        android:id="@+id/btnTransisBJT"
        android:layout_width="228dp"
        android:layout_height="104dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/rancho"
        android:text="@string/btn3_compons"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="36sp"
        app:backgroundTint="@color/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCapacitancia" />

    <Button
        android:id="@+id/btnCapacitancia"
        android:layout_width="228dp"
        android:layout_height="104dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/rancho"
        android:text="@string/btn_capacitancia"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="36sp"
        app:backgroundTint="@color/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnOhm" />

    <Button
        android:id="@+id/btnOhm"
        android:layout_width="228dp"
        android:layout_height="104dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/rancho"
        android:text="@string/btn_leyOhm"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="36sp"
        app:backgroundTint="@color/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewResis" />

    <TextView
        android:id="@+id/textViewResis"
        android:layout_width="216dp"
        android:layout_height="76dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/rancho"
        android:text="@string/f_rmulas"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="@color/letter"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>