<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor"
    tools:context=".CapacitorActivity">

    <Button
        android:id="@+id/btnQueEsCap"
        android:layout_width="228dp"
        android:layout_height="104dp"
        android:layout_marginBottom="444dp"
        android:fontFamily="@font/rancho"
        android:text="@string/btn1_cap"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="36sp"
        app:backgroundTint="@color/button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCap"
        app:layout_constraintVertical_bias="0.75" />

    <Button
        android:id="@+id/btnTiposCap"
        android:layout_width="228dp"
        android:layout_height="104dp"
        android:layout_marginBottom="116dp"
        android:fontFamily="@font/rancho"
        android:text="@string/btn3_cap"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="36sp"
        app:backgroundTint="@color/button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCap"
        app:layout_constraintVertical_bias="0.936" />

    <Button
        android:id="@+id/btnComoSeMideCap"
        android:layout_width="228dp"
        android:layout_height="104dp"
        android:layout_marginBottom="288dp"
        android:fontFamily="@font/rancho"
        android:text="@string/btn2_cap"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="36sp"
        app:backgroundTint="@color/button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCap"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textViewCap"
        android:layout_width="190dp"
        android:layout_height="91dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/rancho"
        android:text="@string/btn2_compon"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="@color/letter"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>